--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Audiowide|Bevan|Righteous');
+/* font-family: 'Bevan', cursive;
+font-family: 'Righteous', cursive;
+font-family: 'Audiowide', cursive; */
+h1 {
+  font-family: 'Righteous', cursive;
+  font-size: 150px;
+  /* color: rgb(250, 3, 3); */
+  color: whitesmoke;
+}
 .header {
     background-color: #2c323c;
     color: white;
@@ -22,7 +32,16 @@
   #popover-positioned-left {
     max-width: 200px;
   }
+
+  .heart {
+    font-size: 150px;
+    text-align: center;
+    color: #a50810;
+    animation: beat .45s infinite alternate;
+    transform-origin: center;
+  }
   
-  .bobs-burgers {
-    width: 100%;
+  /* Heart beat animation */
+  @keyframes beat{
+    to { transform: scale(1.4); }
   }
